updates with package grapgh

--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 
 
+VEDERE Doc:  https://docs.google.com/spreadsheets/d/1UI_-ve58C_owmVyrC3VYY9-k33Mi762hRykDR6oXgO4/edit?ts=57c6a555#gid=2017924090
+
+
 Insert SCALAR and LANDUSE parameters    ....DONE
 
 Inser TARGET with Point   --- actually point can be launched from R!!!! 
